# smpl-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  rustfmt.toml
.cargo/: config.toml
bindings/smpl_py/: Cargo.toml  README.md  generate_stubs.py  pyproject.toml
bindings/smpl_py/docker/: Dockerfile
bindings/smpl_py/examples/: anim_and_colors.py  animation_from_matrices.py  drag_and_drop.py  face_animation.py  mcs_gltf_export.py  mcs_headless_fixed_time_update.py  mcs_minimal.py  minimal.py  show_skeleton.py  smpl_gltf_export.py  smpl_headless_fixed_time_update.py  smpl_without_gloss.py  specify_components.py  verts_from_smpl.py
bindings/smpl_py/scripts/: build_and_publish.sh  build_local.sh  build_wheel.sh
bindings/smpl_py/src/: lib.rs
bindings/smpl_py/src/common/: animation.rs  betas.rs  codec.rs  entity_builder.rs  expression.rs  follower.rs  gltf.rs  interop.rs  mod.rs  outputs.rs  pose.rs  pose_hands.rs  pose_override.rs  scene.rs  scene_timer.rs  smpl_model.rs  smpl_models.rs  smpl_options.rs  smpl_params.rs  types.rs
bindings/smpl_py/src/smpl_x/: mod.rs  plugin.rs  smpl_x.rs
crates/smpl_core/: Cargo.toml  README.md
crates/smpl_core/src/: lib.rs
crates/smpl_core/src/codec/: codec.rs  gltf.rs  mod.rs  scene.rs
crates/smpl_core/src/common/: animation.rs  expression.rs  lbs_weights.rs  metadata.rs  outputs.rs  pose.rs  pose_corrective.rs  pose_parts.rs  pose_retarget.rs  smpl_model.rs  smpl_params.rs  types.rs
crates/smpl_core/src/conversions/: mod.rs  pose_chunked.rs  pose_remap.rs
crates/smpl_core/src/smpl_h/: smpl_h.rs
crates/smpl_core/src/smpl_pp/: mod.rs  osim_rot.rs  smpl_pp.rs  smpl_pp_gpu.rs
crates/smpl_core/src/smpl_x/: mod.rs  smpl_x.rs  smpl_x_gpu.rs  smpl_x_pose_parts.rs
crates/smpl_gloss_integration/: Cargo.toml  README.md
crates/smpl_gloss_integration/src/: codec.rs  components.rs  conversions.rs  gltf.rs  lib.rs  outputs.rs  plugin.rs  scene.rs  systems.rs
crates/smpl_rs/: Cargo.toml
crates/smpl_rs/src/: lib.rs
crates/smpl_rs/src/codec/: codec.rs  gltf.rs  scene.rs
crates/smpl_rs/src/common/: animation.rs  betas.rs  expression.rs  lbs_weights.rs  metadata.rs  mod.rs  outputs.rs  pose.rs  pose_corrective.rs  pose_hands.rs  pose_override.rs  pose_parts.rs  pose_retarget.rs  smpl_model.rs  smpl_options.rs  smpl_params.rs  types.rs
crates/smpl_rs/src/conversions/: anim_chunked.rs  pose_chunked.rs  pose_remap.rs
crates/smpl_rs/src/smpl_h/: mod.rs  smpl_h.rs  smpl_h_pose_parts.rs
crates/smpl_rs/src/smpl_x/: smpl_x.rs  smpl_x_gpu.rs  smpl_x_hands.rs  smpl_x_pose_parts.rs
crates/smpl_utils/: Cargo.toml  README.md
crates/smpl_utils/src/: array.rs  io.rs  lib.rs  macros.rs  numerical.rs  vector.rs
data/mcs/: boxing.mcs  dancing_on_beach.mcs  emiliano_punch.mcs  football.mcs  gap.mcs  group.mcs  red_shirt_guy.mcs  skate_04.mcs  worker.mcs
data/smplx/: Dance_03_w_hands.smpl  SMPLX_female_ft.npy  SMPLX_female_uv.npy  apose_to_00093lazysaturdaynightfever.npz  apose_to_catwalk_001.npz  avatar_face_expression.smpl  squat_ow.smpl
examples/: .gitignore
examples/from_smpl/: Cargo.toml
examples/from_smpl/config/: config.toml
examples/from_smpl/src/: main.rs
examples/mcs2metadata/: Cargo.toml
examples/mcs2metadata/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/config/: config.toml
examples/minimal/src/: main.rs
examples/scene/: Cargo.toml
examples/scene/src/: main.rs
examples/smpl2glb/: Cargo.toml
examples/smpl2glb/src/: main.rs
misc_scripts/: create_scene.py  cvt_to_npz.py  get_template.py  hand_pca_2_axis_angle.py  read_npz.py  read_pickle.py  read_smpl.py  standardize_smpl.py
