[workspace]
resolver = "2"
members = [
  "crates/*",
  "bindings/smpl_py",
  "examples/*",
]

# =====================================================================
[workspace.package]
authors = ["Radu Alexandru Rosu <alex@meshcapade.com>", "Aman Shenoy <aman@meshcapade.com>"]
edition = "2021"
rust-version = "1.85"
version = "0.7.0"
description = "A suite of SMPL functionality written over gloss"
license = "MIT"
repository = "https://github.com/Meshcapade/smpl-rs"
readme = "README.md"
keywords = ["3d", "graphics", "animation", "smpl", "smplx"]

# =====================================================================
[workspace.dependencies]
# my crates
smpl-core = { path = "crates/smpl_core", version = "0.7", default-features = false }
smpl-gloss-integration = { path = "crates/smpl_gloss_integration", version = "0.7", default-features = false }
smpl-utils = { path = "crates/smpl_utils", version = "0.7", default-features = false }

gloss_py_macros = {  git = "ssh://git@github.com/Meshcapade/gloss.git", branch = "main", default-features = false}
gloss-renderer = {version = "0.7", default-features = false}
gloss-utils = {version = "0.7", default-features = false}
gloss-img = {version = "0.7", default-features = false}
gloss-hecs = {version = "0.7", default-features = false}
gloss-geometry = {version = "0.7", default-features = false}

# =====================================================================
# Third-party crates
# =====================================================================
log = "0.4"
cfg-if = "1"
image = { version= "0.25", default-features = false, features=["jpeg", "png", "tiff"] } #TODO maybe replace it with zune-image
egui = {version = "0.29", default-features = false, features= ["default_fonts"]}
nalgebra = {version = "0.32", default-features = false, features = ["serde-serialize-no-std"]}
ndarray-npy = { version = "0.9", default-features = false, features = []}
ndarray = { version = "0.16"  }
pollster = "0.3"
map-range = "0.1"
wasm-timer = "0.2"
rangetools = "0.1"
enum-map = "2.6.0"
indexmap = "2.1"
itertools="0.12"
num-derive = "0.4"
base64 = "0.13"
num-traits = { version = "0.2", default-features = false }
strum = "0.26.3" 
strum_macros = "0.26.3"
serde_json = "1.0"
smallvec = "1.11"
abi_stable = "0.11.3"
abi_stable_derive = "0.11.3"
burn-import ={ version = "0.14", default-features = false, features=["onnx"]}
gltf-json = { version = "1.4.1", features = ["extras", "extensions"] }
dyn-clone ="1.0"
burn = { version = "0.14", default-features = false, features=["ndarray", "wgpu", "candle", "autotune"]}
wgpu       = { version = "22.1.0",  default-features = false, features = ["wgsl", "spirv", "webgl", "metal"] } 
bytemuck = { version = "1.12", features = [ "derive" ] }
futures = "0.3"
wasm-bindgen="=0.2.100"
bytemuck_derive = "=1.8.1"
crossbeam-channel = "=0.5.15"
clap = {version = "4.5", features = ["derive"]}
backtrace = "=0.3.74"

# =====================================================================
[profile.dev]
opt-level = 1   # Make debug builds run faster
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).

# =====================================================================
# Optimize all dependencies even in debug builds (does not affect workspace packages):
# =====================================================================
[profile.dev.package."*"]
# opt-level = 2
opt-level = 3

# =====================================================================
[profile.release]
# debug = true # good for profilers
# TODO need more profiling but if we enable the following line the code seems slower
# panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).
lto = true
# strip = false #trying to fix linux to mac compiling https://github.com/rust-lang/rust/issues/114411

# =====================================================================
[profile.bench]
debug = true

# =====================================================================
[workspace.lints.clippy]
#we set priority lower so that these lints can overwriteen by other ones with higher priority like the ones we do allow
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

#all the things we do allow. We set higher priority so we overwrite the "all" and "pedantic"
module_name_repetitions = "allow"  
must_use_candidate = "allow"
missing_panics_doc = "allow"
unused_self = "allow"
explicit_iter_loop = "allow" #messes with hecs query.iter() and makes them super ugly
module_inception = "allow"
# =====================================================================