[workspace]
resolver = "2"
members = [
  "crates/*",
  "bindings/smpl_py",
  "examples/*",
]

# =====================================================================
[workspace.package]
authors = ["Radu Alexandru Rosu <alex@meshcapade.com>", "Aman Shenoy <aman@meshcapade.com>"]
edition = "2021"
rust-version = "1.85"
version = "0.7.0"
description = "A suite of SMPL functionality written over gloss"
license = "MIT"
repository = "https://github.com/Meshcapade/smpl-rs"
readme = "README.md"
keywords = ["3d", "graphics", "animation", "smpl", "smplx"]

# =====================================================================
[workspace.dependencies]
# my crates
smpl-core = { path = "crates/smpl_core", version = "0.7", default-features = false }
smpl-gloss-integration = { path = "crates/smpl_gloss_integration", version = "0.7", default-features = false }
smpl-utils = { path = "crates/smpl_utils", version = "0.7", default-features = false }

gloss_py_macros = {  git = "ssh://git@github.com/Meshcapade/gloss.git", branch = "main", default-features = false}
gloss-renderer = {version = "0.7", default-features = false}
gloss-utils = {version = "0.7", default-features = false}
gloss-img = {version = "0.7", default-features = false}
gloss-hecs = {version = "0.7", default-features = false}
gloss-geometry = {version = "0.7", default-features = false}

# =====================================================================
# Third-party crates
# =====================================================================
log = "0.4"
cfg-if = "1"
image = { version= "0.25", default-features = false, features=["jpeg", "png", "tiff"] } #TODO maybe replace it with zune-image
egui = {version = "0.32", default-features = false, features= ["default_fonts"]}
nalgebra = {version = "0.32", default-features = false, features = ["serde-serialize-no-std"]}
ndarray-npy = { version = "0.9", default-features = false, features = []}
ndarray = { version = "0.16"  }
ndarray-rand = "0.15"
pollster = "0.3"
map-range = "0.1"
wasm-timer = "0.2"
rangetools = "0.1"
enum-map = "2.6.0"
indexmap = "2.1"
itertools="0.12"
num-derive = "0.4"
base64 = "0.13"
num-traits = { version = "0.2", default-features = false }
strum = "0.26.3" 
strum_macros = "0.26.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.11"
abi_stable = "0.11.3"
abi_stable_derive = "0.11.3"
gltf-json = { version = "1.4.1", features = ["extras", "extensions"] }
dyn-clone ="1.0"
burn = {version = "0.18", default-features = false, features=["ndarray", "wgpu", "candle", "std"]}
burn-ndarray = {version = "0.18", default-features = false}
burn-import ={ version = "0.18", default-features = false, features=["onnx"]} 
wgpu       = { version = "25.0", default-features = false,  features = ["wgsl", "spirv"] } 
bytemuck = { version = "1.12", features = [ "derive" ] }
futures = "0.3"
bytemuck_derive = "=1.8.1"
crossbeam-channel = "=0.5.15"
clap = {version = "4.5", features = ["derive"]}
backtrace = "=0.3.74"
# =====================================================================
# Dependencies for wasm https://sotrh.github.io/learn-wgpu/beginner/tutorial1-window/#added-support-for-the-web
# =====================================================================
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.12", features = ["json"], default-features = false }
web-sys = { version = "0.3", features = [
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Document",
    "Window",
    "Element",
]}
js-sys = "0.3"

# =====================================================================
[profile.dev]
opt-level = 1   # Make debug builds run faster
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).

# =====================================================================
# Optimize all dependencies even in debug builds (does not affect workspace packages):
# =====================================================================
[profile.dev.package."*"]
# opt-level = 2
opt-level = 3

# =====================================================================
[profile.release]
# debug = true # good for profilers
# TODO need more profiling but if we enable the following line the code seems slower
# panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).
lto = true
# strip = false #trying to fix linux to mac compiling https://github.com/rust-lang/rust/issues/114411

# =====================================================================
[profile.bench]
debug = true

[profile.release-thin-lto]
inherits = "release"
lto = "thin"


# =====================================================================
[workspace.lints.clippy]
#we set priority lower so that these lints can overwriteen by other ones with higher priority like the ones we do allow
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

#all the things we do allow. We set higher priority so we overwrite the "all" and "pedantic"
module_name_repetitions = "allow"  
must_use_candidate = "allow"
missing_panics_doc = "allow"
unused_self = "allow"
explicit_iter_loop = "allow" #messes with hecs query.iter() and makes them super ugly
module_inception = "allow"
# =====================================================================