[package]
name = "smpl_py"             # name of the rust crate
edition.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
readme = "README.md"
license.workspace = true

[lib]
crate-type = ["cdylib"] #cdylib is needed for pyo3 and rlib is needed so that is can be linked with other libs https://stackoverflow.com/a/4
name = "smpl_rs" # name of the .so library that the Python module will import

[features]
default = ["with-gui", "private"]
with-gui=["smpl-gloss-integration/with-gui", "gloss-renderer/with-gui"]
private=["smpl-core/private"]
extension-module = ["pyo3/extension-module"]

[dependencies]
smpl-core = {workspace= true, default-features = false}
smpl-gloss-integration = {workspace= true, default-features = true}
smpl-utils = {workspace= true, default-features = false}
gloss_py_macros = {workspace= true, default-features = true}
gloss-renderer = {workspace= true, default-features = true}
gloss-utils = {workspace= true, default-features = true}
gloss-hecs= {workspace= true, default-features = true}

pyo3 = { version = "0.22", features = ["macros", "multiple-pymethods", "abi3-py38", "extension-module", "gil-refs"] } #downgrade to 0.17 because rigetti
numpy = { version = "0.22", features = ["nalgebra"] }
burn.workspace=true
log.workspace=true
nalgebra.workspace=true
ndarray.workspace=true

[lints]
workspace = true