[project]
name = "smpl_rs"
readme = "README.md"
license = "MIT"
dynamic = [
    "authors",
    "description",
    "version"
]
requires-python = ">=3.8"

[project.optional-dependencies]
gloss = [
    "gloss_rs>=0.5.0", #due to how FFI works, I would like to minimize possible errors so we only allow a concrete version of gloss
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
include = ["smpl_rs/*.pyi", "smpl_rs/py.typed"]

# [tool.black]
# target_version = ['py37']
# extend-exclude = '''
# # Ignore cargo-generate templates
# ^/src/templates
# '''

# [tool.ruff]
# line-length = 120
# target-version = "py37"

# [tool.mypy]
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# warn_no_return = true
# ignore_missing_imports = true