[package]
name = "smpl-core"
authors.workspace = true
description = "Core functionality of smpl-rs"
edition.workspace = true
license.workspace = true
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/smpl-core"

[features]
default = ["private"]
private = []

[lib]
crate-type = ["rlib"] #making a cdylib would conflict  in name with smpl_py which is named smpl_rs

[dependencies]
smpl-utils.workspace=true

log.workspace=true
cfg-if.workspace=true
nalgebra.workspace=true
ndarray.workspace=true
itertools.workspace=true
rangetools.workspace=true
wasm-timer.workspace=true
serde_json.workspace=true
enum-map.workspace=true
indexmap.workspace=true
strum.workspace=true
strum_macros.workspace=true
num-traits.workspace=true
num-derive.workspace=true
dyn-clone.workspace=true
gloss-renderer.workspace=true
gloss-img.workspace=true
gloss-utils.workspace=true
burn.workspace=true
wgpu.workspace=true
bytemuck.workspace=true
bytemuck_derive.workspace=true
litemap = "=0.7.4"
futures.workspace=true
pollster.workspace=true
wasm-bindgen.workspace=true
# reqwest.workspace=true
ndarray-npy = { workspace = true, features = ["npz", "compressed_npz"]}
gltf = "1.4.0"
gltf-json = { version = "1.4.1", features = ["extras", "extensions"] }
image.workspace=true
base64.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-tls = "=0.2.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen.workspace=true
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
]}
js-sys = "0.3"

[target.x86_64-unknown-linux-gnu] #slightly faster linking
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[lints]
workspace = true



