[package]
name = "smpl-rs"
authors.workspace = true
description = "Top level crate for smpl-rs"
edition.workspace = true
publish = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/smpl-rs"
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
smpl-core.workspace = true
smpl-gloss-integration.workspace = true
smpl-utils.workspace = true

[lib]
crate-type = ["rlib"]

[lints]
workspace = true