[package]
name = "smpl-utils"
authors.workspace = true
description = "Small library for utility functions related to smpl-rs"
edition.workspace = true
publish = true
readme = "README.md"
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/smpl-utils"

[dependencies]
strum = "0.25"
strum_macros = "0.25"
ndarray.workspace=true
num-traits.workspace=true
nalgebra.workspace=true
bytemuck.workspace=true
gloss-utils.workspace=true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen.workspace=true
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Document",
    "Window",
    "Element",
]}
js-sys = "0.3"

[lints]
workspace = true