[package]
name = "smpl_scene"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
smpl-core = { path = "../../crates/smpl_core", default-features = false  }
smpl-gloss-integration = { path = "../../crates/smpl_gloss_integration", default-features = false  }
smpl-utils = { path = "../../crates/smpl_utils", default-features = false  }
gloss-renderer = {workspace= true, default-features = false}
gloss-utils = {workspace= true, default-features = false}

#third party
egui.workspace=true
ndarray-rand = "0.15"
ndarray-npy.workspace=true
nalgebra.workspace=true
nalgebra-glm = "0.18"
rand = "0.8"
enum-map = "2.6.0"
strum = "0.26.3"
strum_macros = "0.26.3"
pollster = "0.3"
futures="0.3"
ndarray.workspace=true
burn.workspace=true
wgpu.workspace=true