[package]
name = "smpl2glb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
smpl-core = { path = "../../crates/smpl_core", default-features = false  }
smpl-gloss-integration = { path = "../../crates/smpl_gloss_integration", default-features = false  }
smpl-utils = { path = "../../crates/smpl_utils", default-features = false  }
gloss-renderer = {workspace= true, default-features = false}


#third party
clap.workspace=true
egui.workspace=true
ndarray-npy.workspace=true
nalgebra.workspace=true
ndarray.workspace=true
burn.workspace=true
wgpu.workspace=true